[tool.poetry]
name = "dinkydicom"
version = "1.0.0a0"
description = "viewer for enhanced MR dicoms with mosaic options"
authors = ["jolinda <jolinda@uoregon.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
matplotlib = "^3.6"
PySimpleGUI = "^4.60"
pydicom = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
